implemented basic add and remove

--- a/index.html
+++ b/index.html
@@ -18,17 +18,42 @@
     <main>
       <section>
         <h2>Boklogg</h2>
+        <ul id="book-list"></ul>
         <form>
           <label for="title">Tittel:</label>
-          <input type="text" id="title" placeholder="tittel" required />
+          <input
+            type="text"
+            id="title"
+            name="title"
+            placeholder="tittel"
+            required
+          />
           <label for="author">Forfatter:</label>
-          <input type="text" id="author" placeholder="forfatter" required />
+          <input
+            type="text"
+            id="author"
+            name="author"
+            placeholder="forfatter"
+            required
+          />
           <label for="genre">Sjanger:</label>
-          <input type="text" id="genre" placeholder="sjanger" required />
+          <input
+            type="text"
+            id="genre"
+            name="genre"
+            placeholder="sjanger"
+            required
+          />
           <label for="year">Utgivelsesår:</label>
-          <input type="number" id="year" placeholder="utgivelsesår" required />
+          <input
+            type="number"
+            id="year"
+            name="year"
+            placeholder="utgivelsesår"
+            required
+          />
           <button type="submit">Oppdater informasjon</button>
-        </form>
+          <button type="button" id="delete-book">Slett bok</button>
       </section>
       <section>
         <h2>Din informasjon</h2>
