--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <header>
       <h1>Velkommen til ditt personlige datadashboard</h1>
       <p>
-        Her kan du se og administrere din personlige informasjon relatert til
-        bøker.
+        Her kan du se og administrere bøker du har lest.
       </p>
     </header>
     <main>
@@ -64,17 +63,6 @@
           />
           <button type="submit">Legg til bok</button>
         </form>
-      </section>
-      <section>
-        <h2>Din informasjon</h2>
-        <form>
-          <label for="name">Navn:</label>
-          <input type="text" id="name" placeholder="navn" required />
-          <label for="email">E-post:</label>
-          <input type="email" id="email" placeholder="e-post" required />
-          <button type="submit">Lagre</button>
-        </form>
-        <h2>Test heading</h2>
       </section>
     </main>
   </body>
