kartlegge om jeg har lest en bok eller vil lese

--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
             placeholder="utgivelsesår"
             required
           />
+          <label for="status">Status:</label>
+          <select id="status" name="status">
+            <option value="read">Har lest</option>
+            <option value="wishlist">Vil lese</option>
+          </select>
           <button type="submit">Legg til bok</button>
         </form>
       </section>
